Change log
==========

1.1 (unreleased)
----------------


1.0 (2012-04-20)
----------------
- refactor the monolithic original module into manageable and 
  testable submodules
- convert functions to class methods
- convert doctests to unit tests
- improve test coverage
- Initial release. For changes prior to this release please see the 
  ``dataflake.ldapconnection`` package up to release 1.4.
- add convenience ``tox`` script to buildout
- fix problem with BASE scoped-searches that specified additional 
  filters
- add coverage testing to tox configuration
- Extended ``dataflake.fakeldap.RaisingFakeLDAPConnection`` to accept 
  a list of exceptions to raise. On each call to the method that is set
  to raise the exception, the first item in the exception list
  is removed and raised. This allows testing code areas nested in
  more than one ``try/except`` clause.


Earlier changes
---------------
For earlier changes, please see the change log in the 
``dataflake.ldapconnection`` package prior to version 1.4.